buttons fixed alignment

--- a/src/style.css
+++ b/src/style.css
@@ -145,7 +145,7 @@ a[onclick] {
 .controls .buttons {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
